--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^4.6.13",
+    "@thirdweb-dev/sdk": "^4.0.74",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-gradient": "^0.6.1",
+    "ethers": "^5.7.2",
+    "next": "14.2.3",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
