--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@thirdweb-dev/react": "^4.6.13",
     "@thirdweb-dev/sdk": "^4.0.74",
     "chart.js": "^4.4.2",
     "chartjs-plugin-gradient": "^0.6.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "ethers": "^5.7.2",
+    "i18next": "^23.11.3",
+    "i18next-resources-to-backend": "^1.2.1",
+    "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "next-i18n-router": "^5.4.2",
     "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^14.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,6 +38,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
