--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.3.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "@thirdweb-dev/react": "^4.6.13",
     "@thirdweb-dev/sdk": "^4.0.74",
     "chart.js": "^4.4.2",
@@ -18,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
+    "framer-motion": "^11.2.5",
     "i18next": "^23.11.3",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.376.0",
@@ -28,6 +32,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-i18next": "^14.1.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
